--- a/Uppgift 3/Uppgift3.html
+++ b/Uppgift 3/Uppgift3.html
@@ -10,9 +10,9 @@
 let radie = prompt("Skriv in cirkelns radie:");
 circle(radie);
 
-function circle(radie){
+function circle(radie){            //Räknar ut omkretsen och arean av en cirkel.
 
-let omkrets = 2 * Math.PI * radie;
+let omkrets = 2 * Math.PI * radie;     
 let area = Math.PI * Math.pow(radie,2);
 alert("Omkrets: " + omkrets.toFixed(1) +"\nArea: " + area.toFixed(1));
 
